# kitsune

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/actions/cache_cargo/: action.yml
.github/workflows/: ci.yml
scripts/: ci_prepare_guest.sh  ci_run_with_tap.sh  guest_init.sh
src/: acpi.rs  boot.rs  cmdline.rs  config.rs  devices.rs  error.rs  gdt.rs  lib.rs  main.rs  memory.rs  vcpu.rs  vmm.rs
src/devices/: legacy_io.rs  serial.rs  virtio_blk.rs  virtio_mmio.rs  virtio_net.rs
tests/: e2e_blk.rs  e2e_boot.rs  e2e_net.rs  e2e_smp.rs  kvm_smoke.rs
tests/common/: mod.rs
tests/support/: guest.rs  host_tcp.rs  kvm.rs  pipe.rs  run.rs  run_tap.rs
